--- a/src/app/index.html
+++ b/src/app/index.html
@@ -59,6 +59,7 @@
     <script src="components/pcusheet/prescription/prescriprion.controller.js"></script>
     <script src="components/pcusheet/labtest/labtest.controller.js"></script>
     <script src="components/pcusheet/status/status.controller.js"></script>
+    <script src="components/pcusheet/personal/personalController.js"></script>
 
 </head>
 <body class="hold-transition skin-blue sidebar-mini">
